--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body>
     <div class="container">
       <h1>Guess <span>the</span> Number</h1>
-      <p class="lets">Let's play the guessing game!</p>
       <p class="please">
-        Please enter a number between <span class="start">1</span> -
+        Please enter a number between <br /><span class="start">1</span> -
         <span class="end">100</span>
       </p>
       <p class="message"></p>
