--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       </p>
       <p class="message"></p>
       <input type="number" name="number" id="number" min="0" />
-      <button type="submit" class="check">Check</button>
+      <!-- <button type="submit" class="check">Check</button> -->
+      <button class="check" role="button">Check</button>
       <button type="submit" class="restart" style="display: none" onclick="window.location.reload(false)">
         Play Again!
       </button>
@@ -30,4 +31,6 @@
     <script src="app.js"></script>
   </body>
 </html>
+
+<!-- HTML !-->
 
