--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Number</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./img/question-icon.png" />
+    <link type="image/png" sizes="16x16" rel="icon" href="./img/fav-icon.png">
   </head>
   <body>
     <div class="container">
@@ -17,7 +17,6 @@
       </p>
       <p class="message"></p>
       <input type="number" name="number" id="number" min="0" />
-      <!-- <button type="submit" class="check">Check</button> -->
       <button class="check" role="button">Check</button>
       <button type="submit" class="restart" style="display: none" onclick="window.location.reload(false)">
         Play Again!
@@ -32,5 +31,4 @@
   </body>
 </html>
 
-<!-- HTML !-->
 
